tests/regression/42_unknown_var.expected
number of observations set to 10
(10 real changes made)
line 8: if error: variable nosuchvar not found
after keep-typo: 10
line 10: if error: variable nosuchvar not found
after drop-typo: 10
line 12: if error: variable ghost not found
line 13: if error: variable ghost not found
line 14: if error: variable ghost not found
line 15: expression error: variable ghost not found
line 16: expression error: variable ghost not found
final _N: 10

    Variable |        Obs        Mean    Std. dev.         Min         Max
-------------+--------------------------------------------------------------
           x |         10         5.5        3.028           1          10
line 23: if error: variable nosuchvar not found
do-file aborted at line 23 (rc=111)
